<resources>
    <string name="app_name">BillMatrix</string>
    <string name="home">HOME</string>
    <string name="logout">LOGOUT</string>
    <string name="save">SAVE</string>
    <string name="add">ADD</string>
    <string name="go">GO</string>
    <string name="REPORTS">REPORTS</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="TODAYS_PURS">TODAY\'S PURCHASES</string>
    <string name="VIEW_STOCK">VIEW STOCK</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="sno">S.NO.</string>
    <string name="STATUS">STATUS</string>
    <string name="ACTION">ACTION</string>
    <string name="Select_printer_dialog_title">Select Printer to connect</string>
    <string name="LOCATION">LOCATION</string>
    <string name="No_results">No Results found, Try again</string>
    <string name="storage_permission_rationale">"Storage permissions are needed for uploading Images."</string>
    <string name="zero">0.00</string>
    <string name="only_alphaNumeric">0123456789.qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="cont_wo_printer">Continue without Print</string>
    <string name="scanning">Scanning for other printers</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="licencekey">Licence Key</string>
    <string name="signin">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="remember">Remember</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="contactAdmin">CONTACT ADMINISTRATOR</string>
    <string name="copyright">%1$d &#169; BillMatrix, Next Gen, Retail Solution</string>
    <string name="dialog_msg">Enter your registered mobile number below to reset your password</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="pos">pos</string>
    <string name="inventory">inventory</string>
    <string name="reports">reports</string>
    <string name="customers">customers</string>
    <string name="profile">profile</string>
    <string name="payments">payments</string>
    <string name="settings">settings</string>
    <string name="employee">employees</string>
    <string name="okay">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="storeadministrator">STORE ADMINISTRATOR: </string>
    <string name="branch">BRANCH: </string>
    <string name="location">LOCATION: </string>
    <string name="administrator">Administrator</string>
    <string name="loginid">Login ID</string>
    <string name="pwd">Password</string>
    <string name="licence">Licence Key</string>
    <string name="mobile">Mobile</string>
    <string name="PROFILE">PROFILE</string>
    <string name="employeeName">EMPLOYEE NAME</string>
    <string name="LOGINID">LOGIN ID</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="MOBILE">MOBILE</string>
    <string name="wanna_logout">Do you want to logout?</string>
    <string name="title_activity_control_panel">ControlPanelActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="employee_status">
        <item>ACTIVE</item>
        <item>IN-ACTIVE</item>
    </string-array>
    <string name="customerName">CUSTOMER NAME</string>
    <string name="CONTACTNO">CONTACT NO.</string>
    <string name="DATE">DATE</string>
    <string name="Date">Date</string>
    <string name="bill_no">Bill No.</string>
    <string name="select_customer">SELECT THE CUSTOMER</string>
    <string name="select_bill">SELECT THE BILL</string>
    <string name="total_bill_amt">Total Bill Amount</string>
    <string name="amt_paid">Amount Paid</string>
    <string name="total_due">Total Due</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="units">Units</string>
    <string name="rate">Rate</string>
    <string name="total_inr">Total - INR</string>
    <string-array name="customer_status">
        <item>ACTIVE</item>
        <item>IN-ACTIVE</item>
    </string-array>
    <string name="itemcode">ITEM CODE</string>
    <string name="Unit">UNIT</string>
    <string name="PRICE">PRICE</string>
    <string name="MY_COST">MY COST</string>
    <string name="WARE_HOUSE">WARE HOUSE</string>
    <string name="VENDOR">VENDOR</string>
    <string name="PHOTO">PHOTO</string>
    <string name="BAR_CODE">BARCODE</string>
    <string name="addItem_scan_bar_code">ADD ITEM BY SCANNING BARCODE</string>
    <string name="GENERATE_BAR_CODE">GENERATE BARCODE</string>
    <string name="GENERATE_PRINT_BAR_CODE">GENERATE and PRINT BARCODE</string>
    <string name="PRINT_BAR_CODE">PRINT BARCODE</string>
    <string name="no_of_barcodes">NO OF BARCODES</string>
    <string name="BAR_CODE_GENERATED">BARCODE GENERATED</string>
    <string-array name="units_array">
        <item>kgs</item>
        <item>gms</item>
        <item>ltrs</item>
        <item>mls</item>
        <item>pcs</item>
        <item>nos</item>
        <item>units</item>
        <item>Other</item>
    </string-array>
    <string name="inventory_search_hint">Enter Barcode / itemcode / item name / category</string>
    <string name="vendor_search_hint">Vendor ID / Name</string>
    <string name="inventory_search_text">SEARCH FOR ITEM</string>
    <string name="vendor_search_text">SEARCH VENDOR</string>
    <string name="vendor_id">VENDOR ID</string>
    <string name="vendor_name">VENDOR NAME</string>
    <string name="vendor_since">VENDOR SINCE</string>
    <string name="vendor_add">VENDOR ADDRESS</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="dateof_payment">DATE OF PAYMENT</string>
    <string name="modeof_payment">MODE OF PAYMENT</string>
    <string name="amount">AMOUNT</string>
    <string name="vendor">VENDOR</string>
    <string name="expense_name">EXPENSE NAME</string>
    <string name="purpose">PURPOSE</string>
    <string-array name="mode_of_pay_array">
        <item>CASH</item>
        <item>CHEQUE</item>
        <item>CARD</item>
        <item>OTHER</item>
    </string-array>
    <string name="from_date">FROM DATE</string>
    <string name="to_date">TO DATE</string>
    <string name="select_one">SELECT ONE</string>
    <string name="VIEW">VIEW</string>
    <string name="Print">PRINT</string>
    <string name="QTY">QTY</string>
    <string name="DISCOUNT">DISCOUNT %</string>
    <string name="DISCOUNT_CODE">CODE</string>
    <string name="COST">COST</string>
    <string name="ITEM_NAME">ITEM NAME</string>
    <string name="TOTAL_DISCOUNTED_BILL_AMT">TOTAL DISCOUNTED BILL AMT</string>
    <string name="TOTAL_SALES">TOTAL SALES</string>
    <string name="TOTAL_PROFIT">TOTAL PROFIT</string>
    <string name="TOTAL_DISC">TOTAL DISCOUNT</string>
    <string name="Brand">BRAND</string>
    <string name="report_name">NAME OF THE REPORT</string>
    <string name="total_stock_available">TOTAL STOCK AVAILABLE: </string>
    <string name="sale_note">NOTE: MAXIMUM 2 MONTHS OLD REPORTS ONLY AVAILABLE ON DEVICE, REST IS AVAILABLE ON CLOUD</string>
    <string-array name="sale_by_array">
        <item>SELECT ONE</item>
        <item>SALE TOTAL</item>
        <item>SALE BY ITEM</item>
        <item>SALE BY VENDOR</item>
        <item>SALE PROFIT</item>
        <item>SALE BY DISCOUNT</item>
    </string-array>
    <string-array name="purchase_by_array">
        <item>SELECT ONE</item>
        <item>PURCHASE TOTAL</item>
        <item>PURCHASE BY VENDOR</item>
    </string-array>
    <string-array name="vendors_by_array">
        <item>SELECT ONE</item>
        <item>Accounts (Unpaid)</item>
        <item>Vendor Purchases</item>
    </string-array>
    <string-array name="items_by_array">
        <item>SELECT ONE</item>
        <item>Available Stock</item>
        <item>Bottom selling items</item>
        <item>Top Selling Items</item>
    </string-array>
    <string name="tax_type">TAX TYPE</string>
    <string name="tax_desc">TAX DESCRIPTION</string>
    <string name="tax_rate">TAX RATE</string>
    <string-array name="tax_type_array">
        <item>SELECT ONE</item>
        <item>Value Added Tax</item>
        <item>Service Tax</item>
        <item>Excise Duty</item>
        <item>Other</item>
    </string-array>
    <string name="discount_desc">DISCOUNT DESCRIPTION</string>
    <string name="discount_code">DISCOUNT CODE</string>
    <string name="discount">DISCOUNT</string>
    <string name="store_name">Store Name</string>
    <string name="address_1">Address 1</string>
    <string name="add_2">Address 2</string>
    <string name="city_state">City, State</string>
    <string name="zip_code">Zip Code</string>
    <string name="vat_tin">VAT TIN#</string>
    <string name="cst_no">CST NO</string>
    <string name="phone_mobile">Phone / Mobile</string>
    <string name="bill_header">BILL HEADER</string>
    <string name="bill_footer">BILL FOOTER</string>
    <string name="thanku_visit_again">THANK YOU \n VISIT AGAIN</string>
    <string name="add_to_bill">ADD TO A BLL</string>
    <string name="transport_name">Transport Name</string>
    <string name="transport">TRANSPORT</string>
    <string name="db_transport">Transport</string>
    <string name="last_sync_date">LAST SYNCHRONIZED DATE : </string>
    <string name="sync_note">NOTE : SALES SYNCHRONIZATION IS UPTO MAXIMUM 3 MONTHS OLDER DATA</string>
    <string name="sync_to_server">SYNCHRONIZE TO SERVER</string>
    <string name="sync_with_server">SYNCHRONIZE WITH SERVER</string>
    <string name="sync_from_server">SYNCHRONIZE FROM SERVER</string>
    <string name="sync_in_progress">SYNC IN PROGRESS</string>
    <string name="pending_sync">PENDING SYNCHRONIZATION</string>
    <string name="sync_ed">SYNCHRONIZED</string>
    <string name="Inventory">Inventory</string>
    <string name="Reports">Reports</string>
    <string name="Customers">Customers</string>
    <string name="Purchases">Payments</string>
    <string name="Sales">Sales</string>
    <string name="Vendors">Vendors</string>
    <string name="Discounts">Discounts</string>
    <string name="Taxes">Taxes</string>
    <string name="Header_n_Footer">Header and Footer</string>
    <string name="generated_report">Generated Report (Custom)</string>
    <string name="sync">SYNC</string>
    <string name="sync_selected">SYNC SELECTED</string>
    <string name="sync_all">SYNC ALL</string>
    <string name="Employees">Employees</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="sell_item">SELL ITEM</string>
    <string name="PAY">PAY</string>
    <string name="credit">Credit</string>
    <string name="INVENTORY">INVENTORY</string>
    <string name="search_customer">Search Customer</string>
    <string name="TOTAL">TOTAL</string>
    <string name="TOTAL_colon">TOTAL:</string>
    <string name="Tax_colon">TAX:</string>
    <string name="z_bill">Z BILL</string>
    <string name="cash_or_card">CASH &#8725; CARD</string>
    <string name="ITEMS">ITEMS</string>
    <string name="sub_total">SUB TOTAL:</string>
    <string name="select_pos_customer">SELECT CUSTOMER</string>
    <string name="add_guest_as_customer">ADD GUEST AS CUSTOMER</string>
    <string name="add_new_customer">ADD NEW CUSTOMER</string>
    <string name="transport_details">TRANSPORT DETAILS</string>
    <string name="transport_service_name">Transport Service Name</string>
    <string name="consign_no">LR / Consignment No</string>
    <string name="dispatch_date">Dispatch Date</string>
    <string name="customer_name">Customer Name</string>
    <string name="YES">YES</string>
    <string name="Payments">Payments</string>
    <string name="are_you_sure_Cancel_bill">Are you sure, you want to cancel this Bill?</string>
    <string name="for_customer">For Customer: %1$s</string>
</resources>