<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_row"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_item_inven_sno"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="48dp"
        android:text="@string/sno"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_itemcode"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/itemcode"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_name"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="148dp"
        android:text="@string/ITEM_NAME"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_unit"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/Unit"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_qty"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="48dp"
        android:text="@string/qty"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_price"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/PRICE"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_my_cost"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/MY_COST"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_date"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/DATE"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_ware_house"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="120dp"
        android:text="@string/WARE_HOUSE"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_vendor"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="156dp"
        android:text="@string/vendor"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_bar_code"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="148dp"
        android:text="@string/BAR_CODE"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_inven_photo"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:minWidth="104dp"
        android:text="@string/PHOTO"
        android:textAllCaps="true"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="12dp"
        android:layout_weight="1"
        android:gravity="center"
        android:minWidth="104dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_item_Inven_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_icon" />

        <ImageView
            android:id="@+id/im_item_Inven_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/delete" />

    </LinearLayout>
</LinearLayout>