<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="8">

    <TextView
        android:id="@+id/tv_item_report_sno"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="0.35"
        android:gravity="center"
        android:text="@string/sno"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_item_name"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1.45"
        android:gravity="center"
        android:text="@string/ITEM_NAME"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_vendor"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/VENDOR"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_date"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/PURCHASE_DATE"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_cost"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:text="@string/COST"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_qty"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="1.3"
        android:gravity="center"
        android:text="@string/QTY"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_discount"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/DISCOUNT"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_report_total"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/TOTAL"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@drawable/green_button"
            android:gravity="center"
            android:text="@string/Print"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>