<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="6">

        <TextView
            android:id="@+id/tv_item_trans_sno"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/sno"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_trans_name"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/item_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_trans_qty"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/qty"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_trans_units"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/units"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_trans_rate"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/rate"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_trans_total"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_inr"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>