<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/tv_item_due_billNO"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bill_no"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_due_date"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Date"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_due_billAmount"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_bill_amt"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_due_amtPaid"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amt_paid"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_item_due_totalDue"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_due"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>